test-cases/negative/test_004_incomplete_expect.lay
# negative test: incomplete expect statement
# expected: error should be thrown

expect the variable x


